# windows_backup_lite

./: .gitignore  CHANGELOG_V3.md  CMakeLists.txt  CMakePresets.json  GUI优化完成总结.md  GUI双列表模式说明.md  GUI增强功能说明.md  GUI自定义过滤器修复说明.md  GUI预览功能说明.md  LICENSE  README.md  config.example.json  vcpkg.json  中文支持完成.md  中文预设支持说明.md  优化说明.md  功能升级说明-预设与自定义组合.md  如何修改应用图标.md  快速开始-组合过滤器.md  快速配置参考.md  测试中文预设.bat  自定义过滤器配置说明.md  预设与自定义过滤器组合使用说明.md
include/: backup_handler.h  backup_strategy.h  compression_utils.h  config_loader.h  gui_app.h  hash_utils.h  logger.h  version_manager.h
resources/: README.md  app_icon.rc  resource.h
src/: backup_handler.cpp  compression_utils.cpp  config_loader.cpp  gui_app.cpp  hash_utils.cpp  logger.cpp  main.cpp  main_gui.cpp  version_manager.cpp
备份配置文件/: README.md  config.json  config_自定义过滤器示例.json
备份配置文件config/: presets.json  presets_中文.json
